Fixed grid spacing.

--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,14 @@ html {
 body {
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
     padding: 20px;
     min-width: 1390px;
+}
+
+i {
+    color: black;
 }
 
 /* Title */
@@ -225,9 +230,14 @@ body {
 }
 
 #quantity-selector, #object-selector {
+    color: black;
     border-radius: 5px;
     height: 30px;
     margin-right: 5px;
+}
+
+#object-selector {
+    width: 160px;
 }
 
 /* Classroom */
@@ -257,8 +267,8 @@ body {
     box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.8);
     height: 380px;
     margin: 40px;
-    max-height: 660px;
-    max-width: 660px;
+    max-height: 650px;
+    max-width: 650px;
     min-width: 240px;
     min-height: 240px;
     overflow: hidden;
